--- a/config.json
+++ b/config.json
@@ -4,24 +4,7 @@
             "domains": [
                 "gmail.com",
                 "yahoo.com",
-                "hotmail.com",
-                "aol.com",
-                "hotmail.co.uk",
-                "hotmail.fr",
-                "msn.com",
-                "yahoo.fr",
-                "wanadoo.fr",
-                "orange.fr",
-                "comcast.net",
-                "yahoo.co.uk",
-                "yahoo.com.br",
-                "yahoo.co.in",
-                "live.com",
-                "rediffmail.com",
-                "free.fr",
-                "gmx.de",
-                "web.de",
-                "yandex.ru"
+                "hotmail.com"
             ],
             "format"   : "{permutation}@{domain}"
         },
